@@ -22,9 +22,11 @@
 
 #include <qdatetime.h>
 #include <qsqldatabase.h>
+#include <qfontmetrics.h>
 
 #include <dvt.h>
 #include <dvtconf.h>
+#include <spread_sheet.h>
 
 #include <pick_fields.h>
 #include <list_reports.h>
@@ -55,15 +57,44 @@ void ListReports::AddedProgramsReport(Dvt::RemarkType type)
   if((f=GetTempFile(&outfile))==NULL) {
     return;
   }
+  fclose(f);
+
+  //
+  // Generate Fonts
+  //
+  QFont main_font("arial",10,QFont::Normal);
+  QFontMetrics *fm=new QFontMetrics(main_font);
+
+  //
+  // Report Header
+  //
+  SpreadSheet *sheet=new SpreadSheet();
+  SpreadTab *tab=sheet->addTab(1);
   if(type==Dvt::RemarkProgramAdd) {
-    fprintf(f,"\"Added Programs Report\"\n");
+    tab->setName(tr("Added Programs"));
+    tab->addCell(1,1)->setText(tr("Added Programs Report"),fm);
   }
   else {
-    fprintf(f,"\"Deleted Programs Report\"\n");
+    tab->setName(tr("Deleted Programs"));
+    tab->addCell(1,1)->setText(tr("Deleted Programs Report"),fm);
   }
-  fprintf(f,"\"Report Date: %s\"\n",(const char *)dt.toString("MM/dd/yyyy hh:mm:ss"));
-  fprintf(f,"\n");
-  fprintf(f,"\"CALL\",\"BAND\",\"FREQ\",\"ADDRESS\",\"CITY\",\"STATE\",\"MARKET\",\"PROGRAM DIRECTOR\",\"PHONE\",\"FAX\",\"E-MAIL\"\n");
+  tab->addCell(1,2)->setText(tr("Report Date")+": "+
+			     dt.toString("MM/dd/yyyy hh:mm:ss"),fm);
+  tab->addCell(1,4)->setText(tr("CALL"),fm);
+  tab->addCell(2,4)->setText(tr("BAND"),fm);
+  tab->addCell(3,4)->setText(tr("FREQ"),fm);
+  tab->addCell(4,4)->setText(tr("ADDRESS"),fm);
+  tab->addCell(5,4)->setText(tr("CITY"),fm);
+  tab->addCell(6,4)->setText(tr("STATE"),fm);
+  tab->addCell(7,4)->setText(tr("MARKET"),fm);
+  tab->addCell(8,4)->setText(tr("PROGRAM DIRECTOR"),fm);
+  tab->addCell(9,4)->setText(tr("PHONE"),fm);
+  tab->addCell(10,4)->setText(tr("FAX"),fm);
+  tab->addCell(11,4)->setText(tr("E-MAIL"),fm);
+
+  //
+  // Report Body
+  //
   sql="select AFFILIATES.ID,AFFILIATES.STATION_CALL,AFFILIATES.STATION_TYPE,\
        AFFILIATES.STATION_FREQUENCY,AFFILIATES.ADDRESS1,AFFILIATES.ADDRESS2,\
        AFFILIATES.CITY,AFFILIATES.STATE,AFFILIATES.ZIPCODE,\
@@ -86,6 +117,7 @@ void ListReports::AddedProgramsReport(Dvt::RemarkType type)
 	    (const char *)end_date.toString("yyyy-MM-dd"));
   sql+=" order by AFFILIATES.STATION_CALL";
   q=new QSqlQuery(sql);
+  int row=5;
   while(q->next()) {
     sql=QString().sprintf("select PROGRAMS.PROGRAM_NAME,\
                            AFFILIATE_REMARKS.REMARK_DATETIME \
@@ -100,39 +132,49 @@ void ListReports::AddedProgramsReport(Dvt::RemarkType type)
     }
     q1=new QSqlQuery(sql);
     if(q1->size()>0) {
-      fprintf(f,"\"%s\",",(const char *)q->value(1).toString());
-
-      fprintf(f,(const char *)TypeField(q->value(2)));
-      fprintf(f,(const char *)FrequencyField(q->value(3)));
-      fprintf(f,(const char *)AddressField(q->value(4),q->value(5)));
-      fprintf(f,(const char *)StringField(q->value(6)));
-      fprintf(f,(const char *)StringField(q->value(7)).upper());
-      fprintf(f,(const char *)StringField(q->value(9)));
-      fprintf(f,(const char *)ContactFields(q->value(0).toInt(),
-					    ListReports::ProgramDirectorContact,
-					    ListReports::FieldName|
-					    ListReports::FieldPhone|
-					    ListReports::FieldFax|
-					    ListReports::FieldEmail));
-      fprintf(f,"\n");
-      if(type==Dvt::RemarkProgramAdd) {
-	fprintf(f,"\"\",\"PROGRAM\",\"ADDED ON\"\n");
+      tab->addCell(1,row)->setText(q->value(1).toString(),fm);
+      tab->addCell(2,row)->
+	setText(DvtStationTypeString(q->value(2).toString()),fm);
+      tab->addCell(3,row)->
+	setText(DvtFormatFrequency(q->value(3).toDouble()),fm);
+      if(q->value(5).toString().isEmpty()) {
+	tab->addCell(4,row)->setText(q->value(4).toString(),fm);
       }
       else {
-	fprintf(f,"\"\",\"PROGRAM\",\"DELETED ON\"\n");
+	tab->addCell(4,row)->setText(q->value(4).toString()+
+				     ", "+q->value(5).toString(),fm);
       }
+      tab->addCell(5,row)->setText(q->value(6).toString(),fm);
+      tab->addCell(6,row)->setText(q->value(7).toString().upper(),fm);
+      tab->addCell(7,row)->setText(q->value(9).toString(),fm);
+      ContactFields(q->value(0).toInt(),
+		    ListReports::ProgramDirectorContact,
+		    ListReports::FieldName|
+		    ListReports::FieldPhone|
+		    ListReports::FieldFax|
+		    ListReports::FieldEmail,tab,8,row,fm);
+      row++;
+      tab->addCell(1,row);
+      if(type==Dvt::RemarkProgramAdd) {
+	tab->addCell(2,row)->setText(tr("PROGRAM"),fm);
+	tab->addCell(3,row)->setText(tr("ADDED ON"),fm);
+      }
+      else {
+	tab->addCell(2,row)->setText(tr("PROGRAM"),fm);
+	tab->addCell(3,row)->setText(tr("DELETED ON"),fm);
+      }
+      row++;
       while(q1->next()) {
-	fprintf(f,"\"\",");
-	fprintf(f,"\"%s\",",(const char *)q1->value(0).toString());
-	fprintf(f,"\"%s\"",(const char *)q1->value(1).toDateTime().
-		toString("MM/dd/yyyy"));
-	fprintf(f,"\n");
+	tab->addCell(1,row);
+	tab->addCell(2,row)->setText(q1->value(0).toString(),fm);
+	tab->addCell(3,row)->setText(q1->value(1).toDateTime().
+				     toString("MM/dd/yyyy"),fm);
+	row++;
       }
-      fprintf(f,"\n");
+      row++;
     }
     delete q1;
   }
   delete q;
-  fclose(f);
-  ForkViewer(outfile);
+  ForkViewer(outfile,sheet->write(SpreadObject::ExcelXmlFormat));
 }
